самолет к вылету готов

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="меню">
     <link rel="shortcut icon" href="#" type="image/x-icon">
-    <title>куб - самолет</title>
+    <title>3d - самолет</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -30,8 +30,6 @@
         </div>
     </div>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
-    <script src="js/index.js"></script>
 </body>
 
 </html>
