--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
+<div class="wrapper">
 
-
-    <label for="chassis">Шасси
-    </label>
+    <label for="chassis">Убрать шасси</label>
     <input id="chassis" type="checkbox">
 
     <h1>SUPER JET</h1>
 
-    <div class="container">
-      <div class="jet">
+    <div class="jet">
+      <div class="jet__body">
+        <!-- стороны -->
         <div class="jet__side jet__side--left">····</div>
         <div class="jet__side jet__side--right">····</div>
         <div class="jet__side jet__side--back"></div>
@@ -27,22 +27,23 @@
         <div class="jet__side jet__side--top"></div>
         <div class="jet__side jet__side--bottom"></div>
 
-        <div class="jet__side jet__tail">X</div>
+        <!-- хвост -->
+        <div class="jet__tail">X</div>
 
+        <!-- крылья -->
         <div class="jet__wing jet__wing--left">&#9733</div>
         <div class="jet__wing jet__wing--right">&#9733</div>
 
+        <!-- шасси -->
         <div class="jet__chassis jet__chassis--front"></div>
         <div class="jet__chassis jet__chassis--left"></div>
         <div class="jet__chassis jet__chassis--right"></div>
-
-
       </div>
     </div>
-
+</div>
 
   <script>
-    const box = document.querySelector('.jet');
+    const box = document.querySelector('.jet__body');
     let rotateY = 80;
     let rotateX = 10;
     let rotateZ = 10;
@@ -67,7 +68,6 @@
 
 
   </script>
-
 </body>
 
 </html>
