--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <body>
 
-
 <input id="start" class="visually-hidden" type="checkbox">
 <label for="start" class="start-screen">START GAME</label>
 
@@ -40,16 +39,16 @@
       <div class="jet__side jet__side--bottom"></div>
 
       <!-- хвост -->
-      <div class="jet__tail">X</div>
+      <div class="jet__side jet__side--tail">X</div>
 
       <!-- крылья -->
-      <div class="jet__wing jet__wing--left">&#9733;</div>
-      <div class="jet__wing jet__wing--right">&#9733;</div>
+      <div class="jet__side jet__side_wing jet__side_wing--left">&#9733;</div>
+      <div class="jet__side jet__side_wing jet__side_wing--right">&#9733;</div>
 
       <!-- шасси -->
-      <div class="jet__chassis jet__chassis--front"></div>
-      <div class="jet__chassis jet__chassis--left"></div>
-      <div class="jet__chassis jet__chassis--right"></div>
+      <div class="jet__side jet__side_chassis jet__side_chassis--front"></div>
+      <div class="jet__side jet__side_chassis jet__side_chassis--left"></div>
+      <div class="jet__side jet__side_chassis jet__side_chassis--right"></div>
     </div>
   </div>
 </div>
