--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <label for="loop">Петля</label>
   <input id="loop" type="checkbox">
 
+  <label for="fire">Fire</label>
+  <input id="fire" type="checkbox">
+
   <h1>3D AVIATOR only HTML & CSS</h1>
 
   <div class="jet">
@@ -42,8 +45,12 @@
       <div class="jet__side jet__side--tail">X</div>
 
       <!-- крылья -->
-      <div class="jet__side jet__side_wing jet__side_wing--left">&#9733;</div>
-      <div class="jet__side jet__side_wing jet__side_wing--right">&#9733;</div>
+      <div class="jet__side jet__side_wing jet__side_wing--left">&#9733;
+        <div class="jet__rocket jet__rocket--left"></div>
+      </div>
+      <div class="jet__side jet__side_wing jet__side_wing--right">&#9733;
+        <div class="jet__rocket jet__rocket--right"></div>
+      </div>
 
       <!-- шасси -->
       <div class="jet__side jet__side_chassis jet__side_chassis--front"></div>
