added js version

--- a/1 версия с checkbox управлением/index.html
+++ b/1 версия с checkbox управлением/index.html
@@ -17,11 +17,19 @@
 <div class="wrapper">
   <audio src="calambur.mp3" controls loop class="sound" tabindex="0">PLAY</audio>
 
+  <label for="chassis">Шасси</label>
+  <input id="chassis" type="checkbox">
+
+  <label for="barrel">Бочка</label>
+  <input id="barrel" type="checkbox">
+
+  <label for="loop">Петля</label>
+  <input id="loop" type="checkbox">
+
   <label for="fire">Fire</label>
   <input id="fire" type="checkbox">
 
   <h1>3D AVIATOR only HTML & CSS</h1>
-  <p class="row-controls">управление: <kbd>W, S, A, D, Q, E</kbd></p>
 
   <div class="jet">
     <div class="jet__body">
